--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven-publish' // "incubating"
 
-version = '0.9.0'
+version = '0.9.1-SNAPSHOT'
 ext.artifactGroupId = 'ch.petikoch.libs'
 ext.description = 'A little java 7+ standalone library using a "task wait for graph" model to detect deadlocks'
 
@@ -61,6 +61,11 @@ tasks.withType(GroovyCompile) {
 
 tasks.withType(JavaCompile) {
     options.encoding = project.fileEncoding
+}
+
+// http://forums.gradle.org/gradle/topics/set_maxparallelforks_to_number_of_cores_on_the_current_machine
+tasks.withType(Test) {
+    maxParallelForks = Runtime.getRuntime().availableProcessors()
 }
 
 task sourceJar(type: Jar) {
