--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 }
 
 dependencies {
-    testCompile 'org.codehaus.groovy:groovy-all:2.3.8'
+    testCompile 'org.codehaus.groovy:groovy-all:2.3.8:indy'
     testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 }
 
