--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testCompile('org.spockframework:spock-core:0.7-groovy-2.0') {
         exclude group: 'org.codehaus.groovy'
     }
+    testCompile 'com.google.guava:guava:18.0' // provides e.g. nice Multimap
 }
 
 jar {
