--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven-publish' // "incubating"
 
-version = '0.9.1'
+version = '0.9.2-SNAPSHOT'
 ext.artifactGroupId = 'ch.petikoch.libs'
 ext.description = 'A little java 7+ standalone library using a "task wait for graph" model to detect deadlocks'
 
