--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 plugins {
-    id "com.jfrog.bintray" version "1.0"        // https://github.com/bintray/gradle-bintray-plugin
-    id 'nu.studer.credentials' version '1.0.1'  // https://github.com/etiennestuder/gradle-credentials-plugin
+    id "com.jfrog.bintray" version "1.0"            // https://github.com/bintray/gradle-bintray-plugin
+    id 'nu.studer.credentials' version '1.0.1'      // https://github.com/etiennestuder/gradle-credentials-plugin
+    id 'com.github.kt3k.coveralls' version '2.0.1'  // https://github.com/kt3k/coveralls-gradle-plugin
 }
 
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'maven-publish' // "incubating"
+apply plugin: 'jacoco'
 
 version = '0.9.2-SNAPSHOT'
 ext.artifactGroupId = 'ch.petikoch.libs'
@@ -168,5 +170,12 @@ bintray {
         licenses = ['Apache-2.0']
         labels = ['java']
         publicDownloadNumbers = true
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
     }
 }
