--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'maven-publish' /*
  */ // "incubating"
 apply plugin: 'jacoco'
 
-version = '1.0.0'
+version = '1.0.x-SNAPSHOT'
 ext.artifactGroupId = 'ch.petikoch.libs'
 ext.description = 'A little java 7+ standalone library using a "task wait for graph" model to detect deadlocks'
 
