--- a/build.gradle
+++ b/build.gradle
@@ -6,21 +6,8 @@ plugins {
 
 apply plugin: 'java'
 apply plugin: 'groovy'
-apply plugin: 'maven-publish' /*
- * Copyright 2014 Peti Koch und Adrian Elsener
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */ // "incubating"
+apply plugin: 'maven-publish'
+// "incubating"
 apply plugin: 'jacoco'
 
 version = '1.0.x-SNAPSHOT'
