--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "com.jfrog.bintray" version '1.0'            // https://github.com/bintray/gradle-bintray-plugin
     id 'nu.studer.credentials' version '1.0.1'      // https://github.com/etiennestuder/gradle-credentials-plugin
     id 'com.github.kt3k.coveralls' version '2.0.1'  // https://github.com/kt3k/coveralls-gradle-plugin
+    id 'com.github.hierynomus.license' version '0.11.0'  // https://github.com/hierynomus/license-gradle-plugin
 }
 
 apply plugin: 'java'
@@ -180,4 +181,9 @@ jacocoTestReport {
         xml.enabled = true // coveralls plugin depends on xml format report
         html.enabled = true
     }
+}
+
+license {
+    header = rootProject.file('config/HEADER')
+    strictCheck = true
 }
