--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-	id "com.jfrog.bintray" version '1.1'            // https://github.com/bintray/gradle-bintray-plugin
+    id "com.jfrog.bintray" version '1.3.1'          // https://github.com/bintray/gradle-bintray-plugin
     id 'nu.studer.credentials' version '1.0.1'      // https://github.com/etiennestuder/gradle-credentials-plugin
-    id 'com.github.kt3k.coveralls' version '2.0.1'  // https://github.com/kt3k/coveralls-gradle-plugin
+    id 'com.github.kt3k.coveralls' version '2.4.0'  // https://github.com/kt3k/coveralls-gradle-plugin
     id 'com.github.hierynomus.license' version '0.11.0'  // https://github.com/hierynomus/license-gradle-plugin
+    id "com.github.ben-manes.versions" version "0.11.3"
 }
 
 apply plugin: 'java'
@@ -26,7 +27,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.2', classifier: 'indy'
+    testCompile 'org.codehaus.groovy:groovy-all:2.4.4'
     testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
         exclude group: 'org.codehaus.groovy'
     }
@@ -105,14 +106,6 @@ def pomConfig = {
             name 'John Doe'
         }
     }*/
-
-    licenses {
-        license {
-            name 'The Apache Software License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-            distribution 'repo'
-        }
-    }
 }
 
 publishing {
@@ -124,7 +117,14 @@ publishing {
             from components.java
 
             pom.withXml {
+
                 asNode().children().last() + pomConfig
+
+                def licencesNode = asNode().appendNode('licenses')
+                def licenseNode = licencesNode.appendNode('license')
+                licenseNode.appendNode('name', 'The Apache Software License, Version 2.0')
+                licenseNode.appendNode('url', 'http://www.apache.org/licenses/LICENSE-2.0.txt')
+                licenseNode.appendNode('distribution', 'repo')
 
                 // hack... build up the test dependencies ourselve
                 // why? because maven-publish plugin creates crapy dependencies in pom.xml (gradle 2.2)
@@ -137,9 +137,6 @@ publishing {
                     dependencyNode.appendNode('artifactId', it.name)
                     dependencyNode.appendNode('version', it.version)
                     dependencyNode.appendNode('scope', 'test')
-                    if (it.name == 'groovy-all') {
-                        dependencyNode.appendNode('classifier', 'indy')
-                    }
                 }
             }
 
