Various updates (Java 7 --> 8, Gradle Wrapper 3.1 --> 6.8.3, ...) + use Maven Central instead of Bintray/JCenter  (#1)
* Features
  * No new features
* Bugfixes
  * No bug fixes
* Changes
  * Minimum Java version 8 (instead of 7)
  * Update gradle wrapper to 6.8.2 (from 3.1)
  * Use Groovy 2.5.x in the tests (instead of 2.4.x)   
  * Publish to Maven Central instead Bintray/JCenter (Bintray/JCenter will be shut down soon)
  * Simplify build setup: remove Jacoco and Coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,9 @@ language: java
 
 jdk:
   - openjdk8
-  - openjdk7
 
-# jdk7 build issue "java.security.InvalidKeyException" workaround START
-# copied from https://github.com/eseifert/gral/commit/d49d395792c86b9b52f5fa75b1578b6043bf4fd3
-sudo: required
-before_install:
-- sudo wget "https://bouncycastle.org/download/bcprov-ext-jdk15on-158.jar" -O "${JAVA_HOME}/jre/lib/ext/bcprov-ext-jdk15on-158.jar"
-- sudo perl -pi.bak -e 's/^(security\.provider\.)([0-9]+)/$1.($2+1)/ge' /etc/java-7-openjdk/security/java.security
-- echo "security.provider.1=org.bouncycastle.jce.provider.BouncyCastleProvider" | sudo tee -a /etc/java-7-openjdk/security/java.security
-# jdk7 build issue workaround END
+install:
+  - ./gradlew build -x signArchives
 
 env:
 - TERM=dumb
-
-after_success:
-- ./gradlew jacocoTestReport coveralls
