--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'signing'
 
 group = "ch.petikoch.libs"
 archivesBaseName = "jtwfg"
-version = '2.0.0'
+version = '2.0.1-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
